--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(get_local_artist_recommendations)
 export(get_local_recommendations)
 export(get_national_artist_ids)
 export(get_playlist_information)
+export(get_recommendations_all)
 export(get_recommendations_artists_all)
 export(get_release_country)
 export(get_track_recommendations_artist)
@@ -31,6 +32,10 @@ importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map_df)
 importFrom(purrr,possibly)
+importFrom(spotifyr,"\"3QRGYDFFUVb4qneE4DX1gR\"))")
+importFrom(spotifyr,"\\dontrun{")
+importFrom(spotifyr,"get_recommendations_all(c(\"5VIpLopHgolKcSSj7JPCMA\",")
+importFrom(spotifyr,"}")
 importFrom(spotifyr,add_tracks_to_playlist)
 importFrom(spotifyr,get_artists)
 importFrom(spotifyr,get_playlist_audio_features)
