--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: spotifyrecommendations
 Type: Package
 Title: Listen Local Recommendations On Spotify
-Version: 0.1.3
+Version: 0.1.4
 Author: Daniel Antal
 Maintainer: Daniel Antal <daniel.antal@dataobservatory.eu>
 Description: An experimental recommendation system that suggests a partly locally 
@@ -23,3 +23,4 @@ Suggests:
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
+License: GPL (>= 3)
