--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_artist_recommendations_genre)
 export(get_local_artist_recommendations)
 export(get_local_recommendations)
 export(get_national_artist_ids)
+export(get_nearest_tracks)
 export(get_playlist_information)
 export(get_recommendations_all)
 export(get_recommendations_artists_all)
@@ -13,8 +14,11 @@ export(get_release_country)
 export(get_track_recommendations_artist)
 export(initial_recommendations)
 export(upload_playlist)
+import(rlang)
+importFrom(assertthat,assert_that)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
@@ -28,6 +32,8 @@ importFrom(dplyr,rename)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,slice_head)
+importFrom(dplyr,slice_max)
+importFrom(dplyr,slice_sample)
 importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map_df)
@@ -39,5 +45,10 @@ importFrom(spotifyr,get_recommendations)
 importFrom(spotifyr,get_recommendations_all)
 importFrom(spotifyr,get_spotify_access_token)
 importFrom(spotifyr,get_user_playlists)
+importFrom(stats,complete.cases)
+importFrom(stats,kmeans)
 importFrom(tibble,tibble)
 importFrom(tidyselect,all_of)
+importFrom(tidyselect,any_of)
+importFrom(tidyselect,vars_select_helpers)
+importFrom(utils,data)
