--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(spotifyr,get_recommendations)
 importFrom(spotifyr,get_recommendations_all)
 importFrom(spotifyr,get_spotify_access_token)
 importFrom(spotifyr,get_user_playlists)
+importFrom(spotifyr,where)
 importFrom(stats,complete.cases)
 importFrom(stats,kmeans)
 importFrom(tibble,tibble)
