--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Suggests:
     rmarkdown,
     fs,
     readxl
-VignetteBuilder: knitr
+VignetteBuilder: knitr, rmarkdown
 Depends: 
     R (>= 2.10)
 License: GPL (>= 3)
