--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,10 @@ Suggests:
     knitr,
     rmarkdown,
     fs,
-    readxl
+    readxl,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
 License: GPL (>= 3)
+Config/testthat/edition: 3
