--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(spotifyr,add_tracks_to_playlist)
 importFrom(spotifyr,get_artist_audio_features)
 importFrom(spotifyr,get_artist_top_tracks)
 importFrom(spotifyr,get_artists)
+importFrom(spotifyr,get_playlist)
 importFrom(spotifyr,get_playlist_audio_features)
 importFrom(spotifyr,get_recommendations)
 importFrom(spotifyr,get_recommendations_all)
